--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -44,6 +44,7 @@
         ('/hello', 'hello', 'Hello'),
         ('/unemployment/dashboard', 'unemployment_dashboard', 'Unemployment Dashboard'),
         ('/stocks/form', 'stocks_form', 'Stocks Form'),
+        ('/movie/form', 'movie_form', 'Movie Form'),
     ] -%}
     {% set active_page = active_page|default('home') -%}
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
