Update routes file

--- a/web_app/templates/movie_form.html
+++ b/web_app/templates/movie_form.html
@@ -7,7 +7,7 @@
 
     <p>Search for movies...</p>
 
-    <form action="/movies/dashboard" method="GET">
+    <form action="/movie/dashboard" method="GET">
 
         <label>Select Genre:</label>
         <select name="genre_id">
