--- a/web_app/templates/movie_dashboard.html
+++ b/web_app/templates/movie_dashboard.html
@@ -3,47 +3,17 @@
 
 {% block content %}
 
-    <h2>Stocks Dashboard ({{ symbol }})</h2>
+    <h2>Movie Dashboard</h2>
 
-    <p class="lead">Latest Close: {{ latest_close_usd }} (as of {{ latest_date }})</p>
-
-    <div id="chart-container" height="700px"></div>
-
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script type="text/javascript">
-
-        console.log("STOCKS DASHBOARD...")
-
-        // use data from the router!
-        var symbol = '{{ symbol }}'
-        //var stockData = JSON.parse('{{ data }}')
-        //var stockData = '{{ data }}'
-        var stockData = JSON.parse('{{data | tojson}}') // https://stackoverflow.com/a/45132694/670433
-        console.log(stockData)
-
-        //var tsd = stockData["Time Series (Daily)"]
-        //var dates = Object.keys(tsd)
-        //var dailyPrices = Object.values(tsd)
-        var dates = stockData.map(obj => obj["timestamp"])
-        var closingPrices = stockData.map(obj => obj["adjusted_close"])
-
-        // visualize the data
-        // see: https://plotly.com/javascript/line-charts/
-        var series = {
-            x: dates,
-            y: closingPrices,
-            mode: "lines+markers"
-        }
-        var data = [series]
-        var layout = {
-            title: "Daily Closing Prices for Stock: " + symbol,
-            height: 600,
-            yaxis: {
-                tickformat: '$' // https://plotly.com/javascript/tick-formatting/
-            }
-        }
-        Plotly.newPlot("chart-container", data, layout, {responsive: true})
-
-    </script>
+    {% if movies %}
+        <ul>
+            {% for movie in movies %}
+                <li>{{ movie['title'] }} ({{ movie['release_date'] }})</li>
+                <!-- Display other movie information as needed -->
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>No movies found.</p>
+    {% endif %}
 
 {% endblock %}
