--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -43,6 +43,7 @@
         ('/about', 'about', 'About'),
         ('/hello', 'hello', 'Hello'),
         ('/movie/form', 'movie_form', 'Movie Form'),
+        ('/movie/director/form', 'movie_director_form', 'Movie Director Form'),
     ] -%}
     {% set active_page = active_page|default('home') -%}
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
