--- a/web_app/templates/movie_director_dashboard.html
+++ b/web_app/templates/movie_director_dashboard.html
@@ -1,8 +1,8 @@
 {% extends "bootstrap_5_layout.html" %}
-{% set active_page = "movie_genre_dashboard" %}
+{% set active_page = "movie_director_dashboard" %}
 
 {% block content %}
-    <h2>Movie Dashboard</h2>
+    <h2>Movie Director Dashboard</h2>
 
     <div class="row row-cols-1 row-cols-md-3 g-4">
         {% for movie in movies %}
