Update Movie Director Dashboard

--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -93,7 +93,7 @@
 
         <footer style="margin-top:2em; margin-bottom:2em;">
         <hr>
-            &copy; Copyright 2023 [Nina Flinn] |
+            &copy; Copyright 2023 [Nina Flinn, Shania Fan, Olivia Yun] |
             <a href="https://github.com/prof-rossetti/intro-to-python/blob/main/exercises/web-app/README.md">Source</a>
         </footer>
     </div>
