--- a/web_app/templates/movie_director_form.html
+++ b/web_app/templates/movie_director_form.html
@@ -1,5 +1,5 @@
 {% extends "bootstrap_5_layout.html" %}
-{% set active_page = "director_form" %}
+{% set active_page = "movie_director_form" %}
 
 {% block content %}
     <h2>Director Search</h2>
