Removed uneccessary functions

--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -5,6 +5,7 @@
 
     <h1>About Me</h1>
 
-    <p>This is a paragraph on the "about" page.</p>
+    <p>This web app allows users to search for movies using two forms: one form allows 
+        users to search by genre, release date, and language, and the other by director.</p>
 
 {% endblock %}
