--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -3,9 +3,15 @@
 
 {% block content %}
 
-    <h1>About Me</h1>
+    <h1>About My Movie Finder</h1>
 
-    <p>This web app allows users to search for movies using two forms: one form allows 
-        users to search by genre, release date, and language, and the other by director.</p>
+    <p>Here you will be able to find the films that tailor to your movie preferences and interests.</p>
 
-{% endblock %}
+    <p>To search for a movie, navigate to one of two forms on the navigation pane above.</p>
+
+    <p>The "Movie Form" allows you to search by genre, release date, and language, while the 
+        "Movie Director Form" will allow you to filter by director name.</p>
+
+    <p>Happy searching!</p>
+
+    {% endblock %}
