--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
-    <title>Hello, world!</title>
+    <title>My Movie Finder</title>
 </head>
 <body>
 
@@ -41,7 +41,6 @@
     -->
     {% set nav_links = [
         ('/about', 'about', 'About'),
-        ('/hello', 'hello', 'Hello'),
         ('/movie/form', 'movie_form', 'Movie Form'),
         ('/movie/director/form', 'movie_director_form', 'Movie Director Form'),
     ] -%}
@@ -56,7 +55,7 @@
                 -->
                 <i class="bi-globe" style="font-size: 1.7rem; color: white;"></i>
                 &nbsp;
-                My Web App
+                My Movie Finder
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
