--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -3,9 +3,9 @@
 
 {% block content %}
 
-    <h1>Welcome Home</h1>
+    <h1>Welcome!</h1>
 
-    <p>This is a paragraph on the "home" page.</p>
+    <p>Welcome to My Movie Finder. See below for the latest top movie releases this year:</p>
 
     <!-- SEE: https://getbootstrap.com/docs/5.2/components/carousel/ -->
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
