--- a/web_app/templates/layout.html
+++ b/web_app/templates/layout.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>My Web App</title>
+  <title>My Movie Finder</title>
 </head>
 <body>
 
   <!-- SITE NAVIGATION -->
   <div class="container">
     <nav>
-      <h1><a href="/">My Web App</a></h1>
+      <h1><a href="/">My Movie Finder</a></h1>
       <ul>
           <li><a href="/about">About</a></li>
           <li><a href="/hello">Hello</a></li>
