--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -3,14 +3,22 @@
 
 {% block content %}
 
-    <h1>About My Movie Finder</h1>
+    <h1>
+        About 
+        <small class="text-muted">My Movie Finder</small>
+    </h1>
 
-    <p>Here you will be able to find the films that tailor to your movie preferences and interests.</p>
+    <p class="lead">
+        Here you will be able to find the films that tailor to your movie preferences and interests.
+    </p>
+
+    <p> </p>
 
     <p>To search for a movie, navigate to one of two forms on the navigation pane above.</p>
 
-    <p>The "Movie Form" allows you to search by genre, release date, and language, while the 
-        "Movie Director Form" will allow you to filter by director name.</p>
+    <p>The <strong>Movie Form</strong> allows you to search by genre, release year, and language.</p>
+  
+    <p>The <strong>Director Form</strong> allows you to filter by director name.</p>
 
     <p>Happy searching!</p>
 
