--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -3,9 +3,12 @@
 
 {% block content %}
 
-    <h1>Welcome!</h1>
+    <h1>
+        Welcome 
+        <small class="text-muted">to My Movie Finder</small>
+    </h1>
 
-    <p>Welcome to My Movie Finder. See below for the latest top movie releases this year:</p>
+    <p class="lead">See below for the latest top movie releases of this year:</p>
 
     <!-- SEE: https://getbootstrap.com/docs/5.2/components/carousel/ -->
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
