--- a/web_app/templates/movie_director_form.html
+++ b/web_app/templates/movie_director_form.html
@@ -4,7 +4,7 @@
 {% block content %}
     <h2>Director Search</h2>
 
-    <p>Search for movies by director...</p>
+    <p class="lead">Search for movies by director name</p>
 
     <form action="/movie/director/dashboard" method="POST">
         <label>Director Name:</label>
