--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -42,10 +42,10 @@
     {% set nav_links = [
         ('/about', 'about', 'About'),
         ('/movie/form', 'movie_form', 'Movie Form'),
-        ('/movie/director/form', 'movie_director_form', 'Movie Director Form'),
+        ('/movie/director/form', 'movie_director_form', 'Director Form'),
     ] -%}
     {% set active_page = active_page|default('home') -%}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container-fluid">
             <!--a class="navbar-brand" href="/">My Web App</a-->
             <a class="navbar-brand" href="/">
