--- a/web_app/templates/movie_form.html
+++ b/web_app/templates/movie_form.html
@@ -5,7 +5,7 @@
 
     <h2>Movie Form</h2>
 
-    <p>Search for movies...</p>
+    <p class="lead">Search for movies by genre, relrease year, and language</p>
 
     <form action="/movie/genre/dashboard" method="POST">
 
@@ -33,6 +33,8 @@
         </select>
         <br>
 
+        <p> </p>
+        
         <label>Start Year:</label>
         <input type="text" name="start_year" class="form-control" placeholder="Start Year" value ="1990">
         <br>
