--- a/web_app/templates/movie_form.html
+++ b/web_app/templates/movie_form.html
@@ -5,7 +5,7 @@
 
     <h2>Movie Form</h2>
 
-    <p class="lead">Search for movies by genre, relrease year, and language</p>
+    <p class="lead">Search for movies by genre, release year, and language</p>
 
     <form action="/movie/genre/dashboard" method="POST">
 
