--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -10,28 +10,42 @@
 
     <p class="lead">See below for the latest top movie releases of this year:</p>
 
+
     <!-- SEE: https://getbootstrap.com/docs/5.2/components/carousel/ -->
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="https://m.media-amazon.com/images/M/MV5BMDBmYTZjNjUtN2M1MS00MTQ2LTk2ODgtNzc2M2QyZGE5NTVjXkEyXkFqcGdeQXVyNzAwMjU2MTY@._V1_.jpg" class="d-block w-100" alt="...">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="https://m.media-amazon.com/images/M/MV5BMDBmYTZjNjUtN2M1MS00MTQ2LTk2ODgtNzc2M2QyZGE5NTVjXkEyXkFqcGdeQXVyNzAwMjU2MTY@._V1_.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="col-md-6">
+                        <img src="https://m.media-amazon.com/images/M/MV5BNjU3N2QxNzYtMjk1NC00MTc4LTk1NTQtMmUxNTljM2I0NDA5XkEyXkFqcGdeQXVyODE5NzE3OTE@._V1_.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
             </div>
 
             <div class="carousel-item">
-                <img src="https://m.media-amazon.com/images/M/MV5BNjU3N2QxNzYtMjk1NC00MTc4LTk1NTQtMmUxNTljM2I0NDA5XkEyXkFqcGdeQXVyODE5NzE3OTE@._V1_.jpg" class="d-block w-100" alt="...">
-            </div>
-
-            <div class="carousel-item">
-                <img src="https://m.media-amazon.com/images/M/MV5BMDgxOTdjMzYtZGQxMS00ZTAzLWI4Y2UtMTQzN2VlYjYyZWRiXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_FMjpg_UX1000_.jpg" class="d-block w-100" alt="...">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="https://m.media-amazon.com/images/M/MV5BMDgxOTdjMzYtZGQxMS00ZTAzLWI4Y2UtMTQzN2VlYjYyZWRiXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_FMjpg_UX1000_.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="col-md-6">
+                        <img src="https://m.media-amazon.com/images/M/MV5BYTUxYjczMWUtYzlkZC00NTcwLWE3ODQtN2I2YTIxOTU0ZTljXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_FMjpg_UX1000_.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
             </div>
 
             <!-- Add more carousel items as needed -->
             <div class="carousel-item">
-                <img src="https://m.media-amazon.com/images/M/MV5BOTJhNzlmNzctNTU5Yy00N2YwLThhMjQtZDM0YjEzN2Y0ZjNhXkEyXkFqcGdeQXVyMTEwMTQ4MzU5._V1_.jpg" class="d-block w-100" alt="...">
-            </div>
-
-            <div class="carousel-item">
-                <img src="https://m.media-amazon.com/images/M/MV5BMzI0NmVkMjEtYmY4MS00ZDMxLTlkZmEtMzU4MDQxYTMzMjU2XkEyXkFqcGdeQXVyMzQ0MzA0NTM@._V1_.jpg" class="d-block w-100" alt="...">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="URL_TO_YOUR_IMAGE" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="col-md-6">
+                        <img src="ANOTHER_URL_TO_YOUR_IMAGE" class="d-block w-100" alt="...">
+                    </div>
+                </div>
             </div>
 
         </div>
