Changed home carousel again

--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -36,14 +36,24 @@
                 </div>
             </div>
 
-            <!-- Add more carousel items as needed -->
             <div class="carousel-item">
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="URL_TO_YOUR_IMAGE" class="d-block w-100" alt="...">
+                        <img src="https://m.media-amazon.com/images/M/MV5BOTkzYmMxNTItZDAxNC00NGM0LWIyODMtMWYzMzRkMjIyMTE1XkEyXkFqcGdeQXVyMTAyMjQ3NzQ1._V1_FMjpg_UX1000_.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="col-md-6">
-                        <img src="ANOTHER_URL_TO_YOUR_IMAGE" class="d-block w-100" alt="...">
+                        <img src="https://m.media-amazon.com/images/M/MV5BMmY5ZGE4NmUtZWI4OS00ZWJmLWFjMzgtOWUyZjI4NDg3Y2E5XkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="https://m.media-amazon.com/images/M/MV5BZWM5MTQ3NDMtNGFiMS00Y2E5LWE2ZTUtNzM5MTcyZjM3ODRiXkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_FMjpg_UX1000_.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="col-md-6">
+                        <img src="https://m.media-amazon.com/images/M/MV5BOTQyZTBiMjAtZTNjZi00ZjU0LWFkMTQtMDE3Nzc1MjVmMTM4XkEyXkFqcGdeQXVyMTM1NjM2ODg1._V1_FMjpg_UX1000_.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
             </div>
