Added actor form

--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -20,6 +20,8 @@
   
     <p>The <strong>Director Form</strong> allows you to filter by director name.</p>
 
+    <p>The <strong>Actor Form</strong> allows you to search by actor/actress name.</p>
+
     <p>Happy searching!</p>
 
     {% endblock %}
