--- a/web_app/templates/movie_actor_form.html
+++ b/web_app/templates/movie_actor_form.html
@@ -2,7 +2,7 @@
 {% set active_page = "movie_actor_form" %}
 
 {% block content %}
-    <h2>Director Search</h2>
+    <h2>Actor Search</h2>
 
     <p class="lead">Search for movies by actor/actress name</p>
 
