--- a/web_app/templates/movie_form.html
+++ b/web_app/templates/movie_form.html
@@ -7,6 +7,12 @@
 
     <p>Search for movies...</p>
 
+    {% if error_message %}
+        <div class="alert alert-danger" role="alert">
+            {{ error_message }}
+        </div>
+    {% endif %}
+
     <form action="/movie/genre/dashboard" method="POST">
 
         <label>Select Genre:</label>
