Changed carousel to 3 per row.

--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -16,44 +16,56 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <img src="https://m.media-amazon.com/images/M/MV5BMDBmYTZjNjUtN2M1MS00MTQ2LTk2ODgtNzc2M2QyZGE5NTVjXkEyXkFqcGdeQXVyNzAwMjU2MTY@._V1_.jpg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <img src="https://m.media-amazon.com/images/M/MV5BNjU3N2QxNzYtMjk1NC00MTc4LTk1NTQtMmUxNTljM2I0NDA5XkEyXkFqcGdeQXVyODE5NzE3OTE@._V1_.jpg" class="d-block w-100" alt="...">
                     </div>
+                    <div class="col-md-4">
+                        <img src="https://m.media-amazon.com/images/M/MV5BZjYxYWVjMDMtZGRjZS00ZDE4LTk0OWUtMjUyOTI4MmYxNjgwXkEyXkFqcGdeQXVyMTUzMTg2ODkz._V1_FMjpg_UX1000_.jpg" class="d-block w-100" alt="...">
+                    </div>
                 </div>
             </div>
 
             <div class="carousel-item">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <img src="https://m.media-amazon.com/images/M/MV5BMDgxOTdjMzYtZGQxMS00ZTAzLWI4Y2UtMTQzN2VlYjYyZWRiXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_FMjpg_UX1000_.jpg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <img src="https://m.media-amazon.com/images/M/MV5BYTUxYjczMWUtYzlkZC00NTcwLWE3ODQtN2I2YTIxOTU0ZTljXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_FMjpg_UX1000_.jpg" class="d-block w-100" alt="...">
                     </div>
+                    <div class="col-md-4">
+                        <img src="https://m.media-amazon.com/images/M/MV5BOTZmMmY2MzctMjU2Yy00YjJlLTk1NjAtY2U4MmMxOWZkZWY4XkEyXkFqcGdeQXVyMjM4NTM5NDY@._V1_FMjpg_UX1000_.jpg" class="d-block w-100" alt="...">
+                    </div>
                 </div>
             </div>
 
             <div class="carousel-item">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <img src="https://m.media-amazon.com/images/M/MV5BOTkzYmMxNTItZDAxNC00NGM0LWIyODMtMWYzMzRkMjIyMTE1XkEyXkFqcGdeQXVyMTAyMjQ3NzQ1._V1_FMjpg_UX1000_.jpg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <img src="https://m.media-amazon.com/images/M/MV5BMmY5ZGE4NmUtZWI4OS00ZWJmLWFjMzgtOWUyZjI4NDg3Y2E5XkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="col-md-4">
+                        <img src="https://m.media-amazon.com/images/M/MV5BMTU1Y2EzYTQtNDE2Zi00YmY0LTlhOTMtNjA1NzVlZTczMTFlXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
             </div>
 
             <div class="carousel-item">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <img src="https://m.media-amazon.com/images/M/MV5BZWM5MTQ3NDMtNGFiMS00Y2E5LWE2ZTUtNzM5MTcyZjM3ODRiXkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_FMjpg_UX1000_.jpg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <img src="https://m.media-amazon.com/images/M/MV5BOTQyZTBiMjAtZTNjZi00ZjU0LWFkMTQtMDE3Nzc1MjVmMTM4XkEyXkFqcGdeQXVyMTM1NjM2ODg1._V1_FMjpg_UX1000_.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="col-md-4">
+                        <img src="https://m.media-amazon.com/images/M/MV5BZTIyYjhjN2QtYWVhMC00ZDU2LTkyNTEtM2Y4NjU3Y2E2YTVlXkEyXkFqcGdeQXVyMTI5ODA1OTU0._V1_FMjpg_UX1000_.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
             </div>
