Updated movie form

--- a/web_app/templates/movie_form.html
+++ b/web_app/templates/movie_form.html
@@ -5,7 +5,9 @@
 
     <h2>Movie Form</h2>
 
-    <p>Search for movies...</p>
+    <p class="lead">Search for movies by genre, release year, and language</p>
+
+    <p> </p>
 
     {% if error_message %}
         <div class="alert alert-danger" role="alert">
