Updated nav icon.

--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -54,7 +54,7 @@
                     ICONS
                     https://icons.getbootstrap.com/
                 -->
-                <i class="bi-globe" style="font-size: 1.7rem; color: white;"></i>
+                <i class="bi-film" style="font-size: 1.7rem; color: white;"></i>
                 &nbsp;
                 My Movie Finder
             </a>
