--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -94,7 +94,7 @@
         <footer style="margin-top:2em; margin-bottom:2em;">
         <hr>
             &copy; Copyright 2023 [Shania Fan, Nina Flinn, Olivia Yun] |
-            <a href="https://github.com/prof-rossetti/intro-to-python/blob/main/exercises/web-app/README.md">Source</a>
+            <a href="https://github.com/ninaflinn/final_NinaOliviaShania">Source</a>
         </footer>
     </div>
 
