Updated about page

--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -14,7 +14,7 @@
 
     <p> </p>
 
-    <p>To search for a movie, navigate to one of the forms on the navigation pane above.</p>
+    <p>To search for movie recommendations, navigate to one of the forms on the navigation pane above.</p>
 
     <p>The <strong>Movie Form</strong> allows you to search by genre, release year, and language.</p>
   
