--- a/web_app/templates/movie_director_dashboard.html
+++ b/web_app/templates/movie_director_dashboard.html
@@ -1,3 +1,4 @@
+<!-- ChatGPT helped us generate this style -->
 {% extends "bootstrap_5_layout.html" %}
 {% set active_page = "movie_director_dashboard" %}
 
